fixed z-index bugs

--- a/src/components/GridFilterDropdown/GridFilterDropdown.css
+++ b/src/components/GridFilterDropdown/GridFilterDropdown.css
@@ -1,5 +1,5 @@
 .filter-wrapper {
-    z-index: 5;
+    z-index: 3;
 }
 
 .filter-container {
