--- a/src/components/LocationModal/LocationModal.css
+++ b/src/components/LocationModal/LocationModal.css
@@ -2,8 +2,9 @@
     position: fixed;
     height: 100vh;
     width: 100vw;
+    top: 0;
     background-color: rgb(0,0,0,0.7);
-    z-index: 5;
+    z-index: 6;
     display: flex;
     justify-content: center;
     align-items: center;
